<resources>
    <string name="app_name">TestApp</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>

    <string name="action_sign_in_short">Sign in</string>

    <string name="menu_add_string">Add Content</string>
    <string name="menu_refresh_string">Refresh</string>
    <string name="empty_string">Share your first moment here…</string>
    <string name="hint_summary">Summary…</string>
    <string name="hint_desc">Description…</string>
    <string name="capt_submit">Submit</string>
</resources>
