<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/et_sum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@android:color/transparent"
        android:hint="@string/hint_summary"
        android:padding="5dp" />

    <ImageView
        android:id="@+id/img_content"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:foreground="?android:attr/selectableItemBackground"
        android:scaleType="centerInside"
        android:src="@drawable/ic_add_a_photo_black_24dp"
        android:tint="@android:color/darker_gray" />

    <EditText
        android:id="@+id/et_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@android:color/transparent"
        android:hint="@string/hint_desc"
        android:padding="5dp" />

    <Button
        android:id="@+id/btn_submit_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/capt_submit"
        android:textColor="@android:color/white" />

</LinearLayout>